@@ -1,5 +1,7 @@
 2009-04-02  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/linux/bits/socket.h: Add missing protocol numbers.
+
 	* configure.in: Recognize --enable-nss-crypt.
 	* config.make.in: Add nss-crypt entry.
 	* crypt/Makefile: If nss-crypt==yes, don't build md5.c, sha256.c,
